tests/files/parser_tests/should_fail/111.cmdr
//Should fail not after boolean
x = true!;